--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "socket.io-client": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
